# unified_query_maker

./: .gitignore  .gitlab-ci.yml  QUICKSTART.md  README.md  __init__.py  pyproject.toml  setup.py
parsers/: uql_parser.py
paya_uni_query/translators/: cassandra_translator.py  elasticsearch_7_translator.py  elasticsearch_8_translator.py  elasticsearch_translator.py  mariadb_translator.py  mongodb_translator.py  mssql_translator.py  mysql_translator.py  neo4j_translator.py  oracle_translator.py  orientdb_translator.py  postgresql_translator.py
tests/: conftest.py  run_tests.py  test_cassandra_translator.py  test_elasticsearch_7_translator.py  test_models_uql.py  test_models_where_model.py  test_mysql_translator.py  test_translators_cassandra_orientdb_neo4j.py  test_translators_elasticsearch.py  test_translators_mongodb.py  test_translators_mssql_oracle.py  test_translators_public_api.py  test_translators_sql.py  test_utils.py  test_validators.py
translators/: base.py  elasticsearch_translator.py  mysql_translator.py
unified_query_maker/: __init__.py  models.py  utils.py
unified_query_maker/models/: __init__.py  uql.py  where_model.py
unified_query_maker/translators/: base.py  base_sql.py  cassandra_translator.py  elasticsearch_7_translator.py  elasticsearch_8_translator.py  elasticsearch_translator.py  mariadb_translator.py  mongodb_translator.py  mssql_translator.py  mysql_translator.py  neo4j_translator.py  oracle_translator.py  orientdb_translator.py  postgresql_translator.py
unified_query_maker/validators/: schema_validator.py  semantic_validator.py
validators/: schema_validator.py  semantic_validator.py
