[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified_query_maker"
version = "2.0.0"
description = "A versatile query translation library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Pheri" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["unified_query_maker*"]
exclude = ["tests*"]
