[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified_query_maker"
version = "2.2.0"
description = "A versatile query translation library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Pherry" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unified_query_maker*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=unified_query_maker --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["unified_query_maker"]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1

